--- a/blocks/choice-suit/__card-container/choice-suit__card-container.css
+++ b/blocks/choice-suit/__card-container/choice-suit__card-container.css
@@ -1,5 +1,5 @@
 .choice-suit__card-container {
   display: flex;
-  max-width: 500px;
-  margin: 0 auto;
+  flex-wrap: wrap;
+  justify-content: center;
 }
