--- a/blocks/choice-suit/__card/choice-suit__card.css
+++ b/blocks/choice-suit/__card/choice-suit__card.css
@@ -1,7 +1,6 @@
 .choice-suit__card {
-  display: flex;
-  flex-direction: column;
   margin-right: 36px;
+  margin-bottom: 40px;
   background-color: rgba(245, 245, 245, 1);
   border-radius: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
