--- a/blocks/choice-suit/__gender-bar-button/choice-suit__gender-bar-button.css
+++ b/blocks/choice-suit/__gender-bar-button/choice-suit__gender-bar-button.css
@@ -7,3 +7,11 @@
   line-height: 25px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 499px) {
+  .choice-suit__gender-bar-button {
+    width: 128px;
+    font-size: 13px;
+    line-height: 21px;
+  }
+}
