--- a/blocks/about-us/__text/about-us__text.css
+++ b/blocks/about-us/__text/about-us__text.css
@@ -4,4 +4,13 @@
   font-weight: 400;
   font-size: 25px;
   line-height: 39px;
+  grid-area: text;
+}
+
+@media screen and (max-width: 499px) {
+  .about-us__text {
+    max-width: 284px;
+    font-size: 13px;
+    line-height: 30px;
+  }
 }
