--- a/blocks/about-us/__title/about-us__title.css
+++ b/blocks/about-us/__title/about-us__title.css
@@ -3,4 +3,13 @@
   font-weight: 700;
   font-size: 37px;
   line-height: 58px;
+  grid-area: title;
+}
+
+@media screen and (max-width: 499px) {
+  .about-us__title {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 25px;
+  }
 }
