--- a/blocks/choice-suit/__button/choice-suit__button.css
+++ b/blocks/choice-suit/__button/choice-suit__button.css
@@ -12,3 +12,13 @@
   font-size: 15px;
   line-height: 25px;
 }
+
+@media screen and (max-width: 499px) {
+  .choice-suit__button {
+    /* margin-left: 28px; */
+    margin-bottom: 20px;
+    width: 236px;
+    font-size: 13px;
+    line-height: 21px;
+  }
+}
