--- a/blocks/choice-suit/__size-panel-button/choice-suit__size-panel-button.css
+++ b/blocks/choice-suit/__size-panel-button/choice-suit__size-panel-button.css
@@ -10,3 +10,14 @@
   font-size: 15px;
   line-height: 25px;
 }
+
+.choice-suit__size-panel-button:active {
+  background-color: rgba(27, 97, 2, 1);
+  color: #fff;
+}
+
+@media screen and (max-width: 499px) {
+  .choice-suit__size-panel-button {
+    padding: 4px 18px;
+  }
+}
