--- a/blocks/choice-suit/__slider-title/choice-suit__slider-title.css
+++ b/blocks/choice-suit/__slider-title/choice-suit__slider-title.css
@@ -4,3 +4,12 @@
   font-size: 25px;
   line-height: 39px;
 }
+
+@media screen and (max-width: 499px) {
+  .choice-suit__slider-title {
+    margin-bottom: 4px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 25px;
+  }
+}
