--- a/blocks/choice-suit/__slider-treck-button/__slider-treck-button.css
+++ b/blocks/choice-suit/__slider-treck-button/__slider-treck-button.css
@@ -5,3 +5,11 @@
   padding: 3px 49px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 499px) {
+  .choice-suit__slider-treck-button {
+    translate: 0px -17px;
+    padding: 1px 33px;
+    padding-right: 33px;
+  }
+}
