--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,11 @@
 @import url(../blocks/choice-suit/__slider/choice-suit__slider.css);
 @import url(../blocks/choice-suit/__title/choice-suit__title.css);
 @import url(../blocks/choice-suit/choice-suit.css);
+@import url(../blocks/choice-suit/__card-button-left/choice-suit__card-button-left.css);
+@import url(../blocks/choice-suit/__card-button-right/choice-suit__card-button-right.css);
+@import url(../blocks/choice-suit/__button-container/choice-suit__button-container.css);
+@import url(../blocks/choice-suit/__size-panel-button/_active/choice-suit__size-panel-button.css);
+@import url(../blocks/button-hover/button-hover.css);
 
 /* Section about-us */
 @import url(../blocks/about-us/about-us.css);
@@ -30,3 +35,4 @@
 @import url(../blocks/about-us/__image/about-us__image.css);
 @import url(../blocks/about-us/__text/about-us__text.css);
 @import url(../blocks/about-us/__title/about-us__title.css);
+@import url(../blocks/about-us/__image-container/about-us__image-container.css);
