feat: Добавлен слайдер с иновационной техникой добавления карточек, снимается opactu при hovere на активную кнопку, реализована функция treck-bar и много еще

--- a/blocks/choice-suit/__size-panel-button/_active/choice-suit__size-panel-button.css
+++ b/blocks/choice-suit/__size-panel-button/_active/choice-suit__size-panel-button.css
@@ -2,3 +2,7 @@
   background-color: rgba(27, 97, 2, 1);
   color: #fff;
 }
+
+.choice-suit__size-panel-button_active:hover {
+  opacity: 1 !important;
+}
