--- a/blocks/choice-suit/__slider-treck-button/_status/choice-suit__slider-treck-button_selected.css
+++ b/blocks/choice-suit/__slider-treck-button/_status/choice-suit__slider-treck-button_selected.css
@@ -2,4 +2,9 @@
   background-color: #1b6102;
   border: 1px solid #1b6102;
   border-bottom-left-radius: 8px;
+  transition: all .8s ease;
+}
+
+.choice-suit__slider-treck-button_selected:hover {
+  opacity: 1;
 }
