--- a/blocks/about-us/about-us.css
+++ b/blocks/about-us/about-us.css
@@ -1,5 +1,6 @@
 .about-us__container {
   margin-left: 91px;
+  margin-bottom: 100px;
   display: grid;
   grid-template-columns: minmax(min-content, max-content);
   grid-template-areas: "image title" "image text";
@@ -8,7 +9,7 @@
 
 @media screen and (max-width: 891px) {
   .about-us__container {
-    margin: 0;
+    margin: 0 0 60px 0;
   }
 }
 
